--- a/index.html
+++ b/index.html
@@ -2,35 +2,118 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SMS Traffic Analytics</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+  <style>
+    body {
+      background: linear-gradient(180deg, #ece9ff 0%, #ffffff 100%);
+      font-family: 'Inter', sans-serif;
+      padding: 30px;
+    }
+    h1 {
+      font-weight: 700;
+      color: #5f27cd;
+    }
+    .card-metric {
+      border-radius: 16px;
+      padding: 20px;
+      background: #fff;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+      margin-bottom: 20px;
+    }
+    .filters, .metrics, .companies, .chart-section {
+      margin-bottom: 40px;
+    }
+    .metric-value {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #341f97;
+    }
+    .company-card {
+      border-left: 6px solid #5f27cd;
+      padding: 20px;
+      margin: 10px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+  </style>
 </head>
 <body>
-  <h1>SMS Traffic Analytics</h1>
-  <p class="subtitulo">Monitoreo de métricas de tráfico de SMS por país, empresa y canal</p>
+  <h1 class="text-center">SMS Traffic Analytics</h1>
+  <p class="text-center text-muted">Monitoreo de métricas de tráfico de SMS por país, empresa y canal</p>
 
-  <!-- Filtros -->
-  <div class="filters">
-    <select id="filterYear">
-      <option value="">Año</option>
-    </select>
-    <select id="filterMonth">
-      <option value="">Mes</option>
-    </select>
-    <select id="filterExecutive">
-      <option value="">Todas las ejecutivas</option>
-    </select>
+  <div class="filters row g-3">
+    <div class="col-md-2">
+      <select id="year" class="form-select">
+        <option value="">Año</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="month" class="form-select">
+        <option value="">Mes</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="country" class="form-select">
+        <option value="">País</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="company" class="form-select">
+        <option value="">Empresa</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="client" class="form-select">
+        <option value="">Cliente</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="executive" class="form-select">
+        <option value="">Ejecutiva</option>
+      </select>
+    </div>
   </div>
 
-  <!-- Tarjetas resumen -->
-  <div id="summary-cards">
-    <!-- Las tarjetas se generarán desde JS -->
+  <div class="metrics row text-center mt-4">
+    <div class="col-md-3">
+      <div class="card-metric">
+        <h6>Total de Mensajes</h6>
+        <div class="metric-value" id="totalMensajes">0</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card-metric">
+        <h6>Ingresos</h6>
+        <div class="metric-value" id="ingresos">$0</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card-metric">
+        <h6>Tasa de Entrega</h6>
+        <div class="metric-value" id="tasaEntrega">0%</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card-metric">
+        <h6>Canales Activos</h6>
+        <div class="metric-value" id="canalesActivos">0</div>
+      </div>
+    </div>
   </div>
 
-  <!-- Gráfica -->
-  <div class="chart-container">
-    <canvas id="trafficChart" width="800" height="400"></canvas>
+  <div class="chart-section">
+    <h4 class="text-center">Volumen Mensual por Empresa</h4>
+    <canvas id="chartEmpresa" height="100"></canvas>
+  </div>
+
+  <div class="companies row" id="companyCards">
+    <!-- Tarjetas de empresas aquí -->
   </div>
 
   <script src="script.js"></script>
